--- a/slides.html
+++ b/slides.html
@@ -16,21 +16,83 @@
   </head>
   <body>
     <div class="reveal">
-      <div class="slides"><section ><section data-markdown><script type="text/template"># THE Example
+      <div class="slides"><section  data-markdown><script type="text/template"># Keyboards 101
+
+From mechanicals to custom, and ergonomic ones
+Daniel Lazar - One Identity
+
+<img src="./assets/1-peter-typing.gif" alt="Peter typing with fancy nails" width="250" />
+</script></section><section ><section data-markdown><script type="text/template">
+## What are mechanical keyboards?
+
+<img src="./assets/2-1-clack-clack.jpeg" alt="LOUD AS HELL" width="350" />
 </script></section><section data-markdown><script type="text/template">
-## Cats
+### Compared to membrane keyboards
 
-This slide is about cats
-
-- Cats are cats
-- Cats
-- What? Cats?
+<img src="./assets/2-2-membrane-mechanism.gif" alt="Membrane mechanism" height="350" />
+<img src="./assets/2-2-mechanical-mechanism.gif" alt="Mechanical mechanism" height="350" />
 </script></section><section data-markdown><script type="text/template">
-## Example
+### Basic switch types
 
-Btw this should be an example slide for ya
+<img src="./assets/2-3-switch-types.gif" alt="Switch types" width="450" />
+</script></section><section data-markdown><script type="text/template">
+### The switch's colors
 
-![Example image](./assets/image-example.png)
+Different colors, represent:
+
+- Different mechanisms
+- Typing experiences
+- Required weight to press
+
+(These specs also depend on the switch's brand)
+</script></section><section data-markdown><script type="text/template">
+### E.g. Cherry MX switches specs
+
+<img src="./assets/2-5-switch-specs.png" alt="Switch types" width="450" />
+</script></section></section><section ><section data-markdown><script type="text/template">
+## Works differently... But why get one?
+
+<img src="./assets/3-1-jackie-chan-confused.jpeg" alt="Switch types" width="450" />
+</script></section><section data-markdown><script type="text/template">
+### Why?
+
+<img src="./assets/3-2-explaining.jpg" alt="Explaining it" width="350" />
+
+- More convenient
+- Sounds heavenly
+- Can give more feedback
+- Overall better typing experience
+</script></section></section><section ><section data-markdown><script type="text/template">
+## How to have a good keyboard?
+
+<img src="./assets/4-1-think-hard.jpg" alt="Thinking hard..." width="350" />
+</script></section><section data-markdown><script type="text/template">
+### Most important: Switches
+
+- Choose the most convenient for you (linear, tactile, clicky)
+- Have the right pressing weight
+- Is it pre-lubed?
+</script></section><section data-markdown><script type="text/template">
+### Wait you said lubed?
+
+Yep
+
+- Less spring noise
+- Smoother presses
+
+<!-- <aside class="notes"><p>You can do it yourself if you have unlubed switches (or you want to relube it), or buy pre-lubed ones that saves you lots of trouble. --&gt;</p>
+<!-- TODO: Get some more usefull images --></aside></script></section><section data-markdown><script type="text/template">
+### And it's not just the switches
+
+There are lots of factors, e.g.:
+
+- Material of keycaps
+- Material of case
+- Material of plate
+- Gasket
+- Foaming
+</script></section><section data-markdown><script type="text/template">
+<img src="./assets/4-5-keyboard-building-parts.jpeg" alt="Keyboard building parts" />
 </script></section></section></div>
     </div>
 
