--- a/index.html
+++ b/index.html
@@ -71,6 +71,7 @@ Different colors, represent:
 
 - Choose the most convenient for you (linear, tactile, clicky)
 - Have the right pressing weight
+  - Heavier ones may be too much for you at first
 - Is it pre-lubed?
 </script></section><section data-markdown><script type="text/template">
 ### Wait you said lubed?
@@ -86,13 +87,91 @@ Yep
 
 There are lots of factors, e.g.:
 
-- Material of keycaps
+- Material of keycaps (e.g. PBT)
 - Material of case
 - Material of plate
 - Gasket
 - Foaming
 </script></section><section data-markdown><script type="text/template">
-<img src="./assets/4-5-keyboard-building-parts.jpeg" alt="Keyboard building parts" />
+<img src="./assets/4-5-gasket-explanation.jpeg" alt="Keyboard gasket explanation" />
+</script></section><section data-markdown><script type="text/template">
+<img src="./assets/4-6-keyboard-building-parts.jpeg" alt="Keyboard building parts" />
+</script></section></section><section ><section data-markdown><script type="text/template">
+## Increase the comfort of typing
+
+<img src="./assets/5-1-comfort.jpeg" alt="Comfort" />
+</script></section><section data-markdown><script type="text/template">
+### Keycap profiles
+
+<img src="./assets/5-2-keycap-profiles.jpeg" alt="Keycap profiles" />
+</script></section><section data-markdown><script type="text/template">
+### Split keyboards
+
+E.g. Alice style
+
+<img src="./assets/5-3-keychron-alice.jpeg" alt="Keychron alice style" />
+</script></section><section data-markdown><script type="text/template">
+### Fully split keyboards
+
+<img src="./assets/5-4-iris-rev8.webp" alt="Iris fully split keyboard" />
+</script></section><section data-markdown><script type="text/template">
+### Staggers
+
+<img src="./assets/5-5-staggers.jpeg" alt="Stagger types" />
+</script></section><section data-markdown><script type="text/template">
+### AND THERE IS EVEN MORE!
+</script></section><section data-markdown><script type="text/template">
+### Staggering in 3D
+
+E.g. Kinesis keyboards
+
+<img src="./assets/5-6-kinesis.jpeg" alt="Kinesis keyboard" />
+</script></section></section><section ><section data-markdown><script type="text/template">
+## Custom layouts and layers
+</script></section><section data-markdown><script type="text/template">
+### Layouts
+
+- QUERTY
+- QUERTZ
+- COLEMAK
+- DVORAK
+
+<img src="./assets/6-2-qwerty-dvorak.jpeg" alt="QWERTY vs DVORAK" />
+</script></section><section data-markdown><script type="text/template">
+### What are layers?
+
+We use it everyday! E.g.:
+
+- Standard layer
+- Shift layer
+
+But we can make custom ones!
+</script></section><section data-markdown><script type="text/template">
+### Programable keyboards
+</script></section><section data-markdown><script type="text/template">
+<img src="./assets/6-4-zmk.jpeg" alt="ZMK firmware" />
+</script></section><section data-markdown><script type="text/template">
+<img src="./assets/6-5-qmk.png" alt="QMK firmware" />
+</script></section><section data-markdown><script type="text/template">
+<img src="./assets/6-6-via.jpeg" alt="VIA" />
+</script></section><section data-markdown><script type="text/template">
+### My VIA demo
+
+<img src="./assets/6-7-VIA-demo.png" alt="My VIA" />
+</script></section></section><section ><section data-markdown><script type="text/template">
+## Thank you!
+
+<img src="./assets/7-1-the-end.gif" alt="The End" />
+</script></section><section data-markdown><script type="text/template">
+### Summary
+
+- What are mechanical keyboards?
+- Works differently... But why get one?
+- How to have a good keyboard?
+- Increase the comfort of typing
+- Custom layouts and layers
+
+<u>Questions?</u>
 </script></section></section></div>
     </div>
 
