--- a/slides.html
+++ b/slides.html
@@ -126,8 +126,25 @@ E.g. Alice style
 E.g. Kinesis keyboards
 
 <img src="./assets/5-6-kinesis.jpeg" alt="Kinesis keyboard" />
+</script></section><section data-markdown><script type="text/template">
+### But they're so weird... Why?
+
+We rarely ever use our thumbs on regular keyboard
+
+<img src="./assets/5-7-thumb.jpeg" alt="Pain Herold thumbs up" />
+</script></section><section data-markdown><script type="text/template">
+These keyboards:
+
+- Fix this problem
+- Prevent shoulder pain
+- Less moving hands and use of our pinky
+- Give more opportunities for layers
+</script></section><section data-markdown><script type="text/template">
+### AND
+
+<img src="./assets/5-9-space-between.gif" alt="Space between splits" />
 </script></section></section><section ><section data-markdown><script type="text/template">
-## Custom layouts and layers
+## Other layouts and custom layers
 </script></section><section data-markdown><script type="text/template">
 ### Layouts
 
@@ -145,6 +162,12 @@ We use it everyday! E.g.:
 - Standard layer
 - Shift layer
 
+There are more types of layers
+
+- Hold (Shift)
+- Toggle (Caps Lock)
+- Hold duration (Mac special characters)
+
 But we can make custom ones!
 </script></section><section data-markdown><script type="text/template">
 ### Programable keyboards
@@ -155,9 +178,13 @@ But we can make custom ones!
 </script></section><section data-markdown><script type="text/template">
 <img src="./assets/6-6-via.jpeg" alt="VIA" />
 </script></section><section data-markdown><script type="text/template">
+### Software based layout changes
+
+<img src="./assets/6-7-karabiner-elements-logo.png" alt="My VIA" />
+</script></section><section data-markdown><script type="text/template">
 ### My VIA demo
 
-<img src="./assets/6-7-VIA-demo.png" alt="My VIA" />
+<img src="./assets/6-8-VIA-demo.png" alt="My VIA" />
 </script></section></section><section ><section data-markdown><script type="text/template">
 ## Thank you!
 
